# web

./: .env.local.example  .gitignore  MOBILE_MODIFICATIONS.md  MOBILE_README.md  MOBILE_WALLET_ADAPTER_README.md  MOBILE_WALLET_DEEP_LINK_FIX.md  MOBILE_WALLET_OFFICIAL_GUIDE.md  MOBILE_WALLET_TROUBLESHOOTING.md  NETWORK_CONFIGURATION_GUIDE.md  OFFICIAL_MWA_SOLUTION.md  capacitor.config.ts  components.json  next.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
.next/: trace
android/: gradle.properties
app/: globals.css  layout.tsx  page.tsx
cloak-mobile/: app.json  package-lock.json  package.json
components/: DecryptedText.tsx  Dock.tsx  DotGrid.tsx  GlitchText.tsx  PixelCard.tsx  TrueFocus.tsx  dapp-header.tsx  mobile-layout.tsx  mobile-redirect.tsx  mobile-specific.tsx  mobile-top-margin.tsx  mobile-wallet-button.tsx  mobile-wallet-debug.tsx  mobile-wallet-provider.tsx  mwa-alternative-strategy.tsx  mwa-deep-link-fix.tsx  navbar.tsx  network-configuration.tsx  official-mwa-react-native.tsx  official-mwa-test.tsx  simple-mobile-wallet-test.tsx  site-header.tsx  validator-selector.tsx  wallet-guard.tsx  wallet-provider.tsx  wasm-prover-component.tsx  withdraw-flow.tsx
examples/: mobile-margin-examples.tsx
hooks/: use-jupiter-swap.ts  use-ore-data-realtime.ts  use-ore-data.ts  use-ore-deploy.ts  use-platform.ts  use-sp1-prover.ts  use-sp1-wasm-prover.ts
lib/: db.ts  (+23 more)
wasm-prover/: Cargo.toml  build.sh
wasm-prover/pkg/: cloak_wasm_prover_bg.wasm.d.ts  package.json
wasm-prover/src/: lib.rs
(+300 files in other folders)
