[package]
name = "cloak-wasm-prover"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
js-sys = "0.3.72"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.132"

# Error handling and utilities
anyhow = "1.0.89"
thiserror = "1.0.69"

# Cryptographic utilities
hex = "0.4.3"
sha2 = "0.10.8"

# Console logging for WASM
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.72", features = [
  "console",
  "Performance",
  "Window",
] }

[dependencies.getrandom]
version = "0.2.15"
features = ["js"]

[features]
default = ["console_error_panic_hook"]
